[gd_scene load_steps=20 format=3 uid="uid://gpg51pp3uvth"]

[ext_resource type="Script" path="res://scenes/game_objects/player/player.gd" id="1_ja18a"]
[ext_resource type="PackedScene" uid="uid://b7lq62mm4ijwd" path="res://scenes/ability/hummer_ability_controller/hummer_ability_controller.tscn" id="2_2jcrb"]
[ext_resource type="PackedScene" uid="uid://ddgo84v5h00c1" path="res://scenes/component/health_component.tscn" id="2_nt8tu"]
[ext_resource type="Texture2D" uid="uid://dqsotpju8lwd" path="res://scenes/game_objects/player/player0.png" id="2_tnjrj"]
[ext_resource type="PackedScene" uid="uid://dausvgwf50yqm" path="res://scenes/component/velocity_component.tscn" id="3_gvylg"]
[ext_resource type="PackedScene" uid="uid://bcibqxek4q6i0" path="res://scenes/component/random_stream_player_2d_component.tscn" id="6_8wxs3"]
[ext_resource type="AudioStream" uid="uid://b36mk3tb280cy" path="res://assets/audio/impact/impactMining_000.ogg" id="7_i2c5e"]
[ext_resource type="AudioStream" uid="uid://c5bgtxw0tnyh3" path="res://assets/audio/impact/impactMining_001.ogg" id="8_wxcey"]
[ext_resource type="AudioStream" uid="uid://ba3pw33itigg7" path="res://assets/audio/impact/impactMining_002.ogg" id="9_iolsc"]
[ext_resource type="AudioStream" uid="uid://ncjy1tpousiy" path="res://assets/audio/impact/impactMining_003.ogg" id="10_qbe8c"]
[ext_resource type="AudioStream" uid="uid://b6p47amcuh7qr" path="res://assets/audio/impact/impactMining_004.ogg" id="11_rwa3c"]

[sub_resource type="Animation" id="Animation_p1xy5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/Sprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Visuals/Sprite2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_71xwg"]
resource_name = "walk"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Sprite2D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -5), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/Sprite2D:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.4, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.261799, 0.246111, 0.0, -0.261799]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Visuals/Sprite2D:scale")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3, 0.4),
"transitions": PackedFloat32Array(0.659753, 2.63902, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.8, 1.1), Vector2(1.5, 0.7), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2r2k8"]
_data = {
"RESET": SubResource("Animation_p1xy5"),
"walk": SubResource("Animation_71xwg")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_oo2mt"]
bg_color = Color(0.247059, 0.14902, 0.192157, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lcwp6"]
bg_color = Color(0.262745, 0.882353, 0.701961, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.247059, 0.14902, 0.192157, 1)

[sub_resource type="CircleShape2D" id="CircleShape2D_aug4l"]
radius = 32.0

[sub_resource type="CircleShape2D" id="CircleShape2D_f8oac"]
radius = 7.5

[sub_resource type="CircleShape2D" id="CircleShape2D_1en7b"]
radius = 6.0

[node name="Player" type="CharacterBody2D" groups=["player"]]
collision_layer = 0
motion_mode = 1
script = ExtResource("1_ja18a")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_2r2k8")
}

[node name="HealthComponent" parent="." instance=ExtResource("2_nt8tu")]

[node name="VelocityComponent" parent="." instance=ExtResource("3_gvylg")]
max_speed = 90
acceleration = 25.0

[node name="Abilities" type="Node" parent="."]

[node name="HummerAbilityController" parent="Abilities" instance=ExtResource("2_2jcrb")]

[node name="DamageIntervalTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="HealthBar" type="ProgressBar" parent="."]
custom_minimum_size = Vector2(32, 6)
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -16.0
offset_top = -24.0
offset_right = 16.0
offset_bottom = -18.0
grow_horizontal = 2
pivot_offset = Vector2(16, 3)
theme_override_styles/background = SubResource("StyleBoxFlat_oo2mt")
theme_override_styles/fill = SubResource("StyleBoxFlat_lcwp6")
max_value = 1.0
value = 0.5
show_percentage = false

[node name="PickupArea2D" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 0
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickupArea2D"]
position = Vector2(0, -6)
shape = SubResource("CircleShape2D_aug4l")

[node name="CollisionArea2D" type="Area2D" parent="."]
position = Vector2(0, -6)
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionArea2D"]
shape = SubResource("CircleShape2D_f8oac")

[node name="Visuals" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Visuals"]
texture = ExtResource("2_tnjrj")
offset = Vector2(0, -8)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -6)
shape = SubResource("CircleShape2D_1en7b")

[node name="HitRandomStreamPlayer" parent="." instance=ExtResource("6_8wxs3")]
streams = Array[AudioStream]([ExtResource("7_i2c5e"), ExtResource("8_wxcey"), ExtResource("9_iolsc"), ExtResource("10_qbe8c"), ExtResource("11_rwa3c")])

[connection signal="health_changed" from="HealthComponent" to="." method="_on_health_component_health_changed"]
[connection signal="timeout" from="DamageIntervalTimer" to="." method="_on_damage_interval_timer_timeout"]
[connection signal="body_entered" from="CollisionArea2D" to="." method="_on_collision_area_2d_body_entered"]
[connection signal="body_exited" from="CollisionArea2D" to="." method="_on_collision_area_2d_body_exited"]
